--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesion 01</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <style type="">
@@ -15,14 +16,24 @@
     #idContent{
 
     }
+    .colorgreen{
+        color: rgb(30, 179, 30);
+        
+    }
 
 </style>
 
 <body>   
-
+<div class="container pt-5" >
+    <h1 class="text-success">Hola sesion 3</h1>
+    <h1 style="color:green">Hola sesion 3</h1>
+    <h1 class="colorgreen">Hola sesion 3</h1>
     <div class="row">
         <div class="col" id="idContent" >
             <p>Hola 1</p>
+            <iframe src="https://www.youtube.com/embed/5EwgbpnB77s">
+            </iframe>
+
             <ul id="idLista">
                 <li>HTML 1</li>
                 <li>HTML 2</li>
@@ -44,6 +55,7 @@
             <p> como <strong>estas</strong>   </p>
     
         </div>
+    </div>
     </div>
 </body>
 
